# probabilistic-energy-forecasting-ML

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  streamlit_app.py
artifacts/figures/: .gitignore
artifacts/metrics/: data_quality_metrics.json  model_training_metrics.json  pilot_evaluation_metrics.json
artifacts/predictions/: .gitignore
artifacts/stages/: .gitignore
data/: processed.dvc  raw.dvc
data/modeling/: .gitignore
data/raw/: Actual_consumption_202403010000_202603020000_Hour.csv  Actual_generation_202403010000_202603020000_Hour.csv
data/validated/: .gitignore  validated_data.parquet
notebooks/: 01_eda.ipynb  02_model_training.ipynb  02_point_forecast_reference.ipynb
src/data/: column_schema.py  data_processing.py  data_validation.py  load_data.py
src/modeling/: __init__.py  build_model_dataset.py  evaluate_pilot.py  model_artifacts.py  predict.py  quantile_columns.py  quantile_repair.py  train_models.py
src/utils/: reproducibility.py
src/visualization/: __init__.py  generate_figures.py  plot_predictions.py
