[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probabilistic-energy-forecasting-ml"
version = "0.1.0"
description = "Day-ahead probabilistic residual load forecasting"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4,<2.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.11,<2.0",
    "pyarrow>=14.0",           # Parquet I/O
    "pyyaml>=6.0",
    "mlflow>=2.10,<3.0",
    "optuna>=3.6,<5.0",
    "dvc[s3]>=3.40",
    "pandera>=0.18",           # DataFrame schema validation
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "joblib>=1.3",
    "lightgbm>=4.1,<5.0",
    "shap>=0.46,<1.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "great-expectations>=0.18,<0.19",
    "streamlit (>=1.56.0,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "httpx>=0.26",             # For testing FastAPI
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
]
addopts = "--strict-markers --tb=short -q"

[tool.hatch.build.targets.wheel]
packages = ["src"]
